🐛 FIX: Button visibility

--- a/Homework/09_DOM/style.css
+++ b/Homework/09_DOM/style.css
@@ -29,3 +29,11 @@ body {
   cursor: pointer;
   margin: 10px;
 }
+
+.block-inteval-colorizer {
+  display: none;
+}
+
+.visible{
+  display: inline-block;
+}
